[FRONTEND] Fixing align in ios

--- a/public/stylesheets/styles.less
+++ b/public/stylesheets/styles.less
@@ -23,6 +23,8 @@ footer {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 }
 
 .main-content {
